Fixed a bug where update options were going out of the view and few other minor fixes

--- a/static/css/_utilities.scss
+++ b/static/css/_utilities.scss
@@ -35,7 +35,7 @@
 	background-color: transparent;
 	color: black;
 	padding: 4px 4px;
-	transition: color, transform background-color 0.5s ease-in-out;
+	transition: color, background-color 0.4s ease-in-out;
 	font-family: $main-font;
 	font-size: medium;
 	cursor: pointer;
