--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -8,6 +8,8 @@ $main-font: "Nunito Sans", sans-serif;
 $heading-font-size: 1.3rem;
 $logo-font-size: 3rem;
 
-$table-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1),
-	0px 10px 20px rgba(0, 0, 0, 0.05), 0px 20px 20px rgba(0, 0, 0, 0.05),
-	0px 30px 20px rgba(0, 0, 0, 0.05);
+$table-shadow: 6px 8px 30px -3px rgba(0, 0, 0, 0.54);
+$table-delete-btn: #e63946;
+$table-heading: #457b9d;
+$table-row-even: #f1faee;
+$table-row-odd: #a8dadc;
